Terminar back-end e criar página para mostrar cada receita

--- a/views/about.njk
+++ b/views/about.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/about.css">
 {% endblock head %}
 
 {% block content %}
