--- a/views/layout.njk
+++ b/views/layout.njk
@@ -12,7 +12,7 @@
     <body>
         <header>
             <a href="/">
-                <img src="./assets/logo.png" alt="">
+                <img src="../assets/logo.png" alt="">
             </a>
             <a class="sobre" href="/about">Sobre</a>
             <a class="receitas" href="/recipes">Receitas</a>
