--- a/views/website/recipes.njk
+++ b/views/website/recipes.njk
@@ -1,8 +1,8 @@
-{% extends "layout.njk" %}
+{% extends "website/layout.njk" %}
 
 {% block head %}
     <title>Recipes</title>
-    <link rel="stylesheet" href="/recipes.css">
+    <link rel="stylesheet" href="/website/recipes.css">
 {% endblock head %}
 
 {% block content %}
@@ -43,5 +43,5 @@
         </div>
     </div>
 
-    <script src="/recipes.js"></script>
+    <script src="/website/recipes.js"></script>
 {% endblock content %}
