--- a/views/website/specification.njk
+++ b/views/website/specification.njk
@@ -1,8 +1,8 @@
-{% extends "layout.njk" %}
+{% extends "website/layout.njk" %}
 
 {% block head %}
     <title>Specification</title>
-    <link rel="stylesheet" href="/specification.css">
+    <link rel="stylesheet" href="/website/specification.css">
 {% endblock head %}
 
 {% block content %}
@@ -57,5 +57,5 @@
         </div>
     </div>
 
-    <script src="/specification.js"></script>
+    <script src="/website/specification.js"></script>
 {% endblock content %}
