--- a/views/website/about.njk
+++ b/views/website/about.njk
@@ -1,8 +1,8 @@
-{% extends "layout.njk" %}
+{% extends "website/layout.njk" %}
 
 {% block head %}
     <title>About</title>
-    <link rel="stylesheet" href="/about.css">
+    <link rel="stylesheet" href="/website/about.css">
 {% endblock head %}
 
 {% block content %}
