--- a/views/admin/listing.njk
+++ b/views/admin/listing.njk
@@ -28,7 +28,7 @@
                         </div>
 
                         <div class="card-button-view">
-                            <a href="#">Visualizar</a>
+                            <a href="/admin/recipes/{{recipe.id}}">Visualizar</a>
                         </div>
                     </div>
 
