--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -10,7 +10,7 @@
         <header>
 
             <a href="/admin/recipes">
-                <img src="../../assets/logo_dark.png" alt="Logo Foodfy">
+                <img src="../../../assets/logo-dark.png" alt="LogoFoodfy">
             </a>
 
         </header>
