--- a/views/website/recipes.njk
+++ b/views/website/recipes.njk
@@ -8,7 +8,7 @@
 {% block content %}
     <section class="cards">
         {% for recipe in recipes %}
-            <div class="card" id="{{recipes.indexOf(recipe)}}">
+            <div class="card" id="{{recipe.id}}">
                 <div class="card-image">
                     <img class="card-image-id" src="{{recipe.image}}" alt="">
                 </div>
