--- a/src/app/views/admin/edit.njk
+++ b/src/app/views/admin/edit.njk
@@ -24,16 +24,19 @@
             <input type="text" name="title" value="{{recipe.title}}">
         </div>
 
-        <div class="author">
-            <h3>Autor</h3>
-
-            <input type="text" name="author" value="{{recipe.author}}">
-        </div>
-
         <div class="image">
-            <h3>Imagem</h3>
+            <h3>Imagem da receita</h3>
 
             <input type="url" name="image" value="{{recipe.image}}">
+        </div>
+
+        <div class="chef">
+            <h3>Chef</h3>
+            <select name="chef">
+                {% for chef in chefOptions %}
+                    <option value="{{chef.id}}" {% if recipe.chef_id == chef.id %} selected="selected" {% endif %}>{{chef.name}}</option>
+                {% endfor %}
+            </select>
         </div>
 
         <div class="_ingredients">
