--- a/public/admin/show.css
+++ b/public/admin/show.css
@@ -13,25 +13,71 @@ body{
 }
 
 header {
-    display: flex;
     background-color: #111111;
     width: 100%;
     height: 80px;
     margin-bottom: 50px;
-    align-items: center;
 }
 
-header a {
+.header {
+    display: flex;
     width: 940px;
-    margin: 30px auto 30px auto;
+    height: 27px;
+    margin: 30px auto;
+    text-align: left;
+    position: relative;
 }
 
-header img {
+.header .logo {
+    margin-right: 160px;
+}
+
+.header img {
+    position: absolute;
     left: 0;
     width: 90.6px;
     height: 26.9px;
     opacity: 100%;
     color: #FFFFFF;
+}
+
+.header .recipes {
+    opacity: 100%;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 30px;
+    align-self: flex-end;
+    padding: 3px;
+}
+
+.header .chefs {
+    opacity: 100%;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: flex-end;
+    padding: 3px;
+}
+
+.links a.active {
+    color: #FFFFFF;
+}
+
+.recipes:hover {
+    transition: font-weight 300ms;
+    color: #FFFFFF;
+}
+
+.chefs:hover {
+    color: #FFFFFF;
+    transition: font-weight 300ms;
 }
 
 .image {
@@ -186,14 +232,14 @@ header img {
     margin-bottom: 20px;
 }
 
-.header {
+.top {
     width: 940px;
     margin: 0px auto;
     display: flex;
     justify-content: space-between;
 }
 
-.header h2 {
+.top h2 {
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
@@ -201,7 +247,7 @@ header img {
     opacity: 100%;
 }
 
-.header a {
+.top a {
     background-color: #6558C3;
     color: white;
     font-size: 16px;
