--- a/public/website/specification.css
+++ b/public/website/specification.css
@@ -51,6 +51,7 @@ header .receitas {
     text-decoration: none;
     color: #111111;
     line-height: 30px;
+    font-weight: bold;
 }
 
 .sobre:hover {
