--- a/src/app/views/admin/listing.njk
+++ b/src/app/views/admin/listing.njk
@@ -10,7 +10,7 @@
         <div class="title">
             <h2>Gerenciar receitas</h2>
         </div>
-
+ 
         <section class="cards">
             {% for recipe in recipes %}
                 <div class="card" id="{{recipes.indexOf(recipe)}}">
@@ -24,7 +24,7 @@
 
                         <div class="card-info">
                             <p class="card-info-id">por
-                                {{recipe.author}}</p>
+                                {{recipe.chef_name}}</p>
                         </div>
 
                         <div class="card-button-view">
