--- a/src/app/views/admin/show.njk
+++ b/src/app/views/admin/show.njk
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div class="header">
+    <div class="top">
         <h2>Receita: {{recipe.title}}</h2>
 
         <a href="/admin/recipes/{{recipe.id}}/edit" type="submit">Editar receita</a>
@@ -19,7 +19,7 @@
 
     <div class="info">
         <p class="title">{{recipe.title}}</p>
-        <p class="author">por {{recipe.author}}</p>
+        <p class="author">por {{recipe.chef_name}}</p>
     </div>
 
     <div class="ingredients">
