--- a/public/website/recipes.css
+++ b/public/website/recipes.css
@@ -54,10 +54,75 @@ header .receitas {
     font-weight: bold;
 }
 
+header .chefs {
+    position: absolute;
+    left: 45.2%;
+    width: 42px;
+    height: 19px;
+    opacity: 100%;
+    font-size: 16px;
+    text-decoration: none;
+    color: #111111;
+    line-height: 30px;
+}
+
+header .filter {
+    position: absolute;
+    right: 0;
+}
+
+header .filter input {
+    width: 246px;
+    height: 37px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    border: 1px solid #DDDDDD;
+    color: #999999;
+    font-size: 14px;
+    line-height: 16px;
+    padding-left: 15px;
+    margin-right: 8px;
+}
+
+header .filter button {
+    background-color: #6558C3;
+    color: white;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: bold;
+    text-align: right;
+    padding: 9px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.search {
+    width: 940px;
+    margin: 20px auto 0px auto;
+}
+
+.search p {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    color: #111111;
+}
+
+.notfound {
+    width: 940px;
+    margin: 40px auto 0px auto;
+}
+
+.notfound p {
+    font-size: 20px;
+    line-height: 24px;
+    color: #777777;
+}
+
 .cards {
     width: 940px;
     height: 450px;
-    margin: 40px auto;
+    margin: 20px auto 40px auto;
     position: relative;
     opacity: 100%;
     display: grid;
