--- a/src/app/views/admin/create-chef.njk
+++ b/src/app/views/admin/create-chef.njk
@@ -16,13 +16,13 @@
         <div class="name">
             <h3>Nome</h3>
 
-            <input type="text" name="name">
+            <input type="text" name="name" required>
         </div>
 
         <div class="image">
             <h3>Avatar</h3>
 
-            <input type="url" name="avatar_url">
+            <input type="url" name="avatar_url" required>
         </div>
 
     </form>
