--- a/src/app/views/website/specification.njk
+++ b/src/app/views/website/specification.njk
@@ -13,7 +13,7 @@
     <div class="info">
         <p class="title">{{recipe.title}}</p>
         <p class="author">por
-            {{recipe.author}}</p>
+            {{recipe.chef_name}}</p>
     </div>
 
     <div class="ingredients">
