--- a/public/admin/edit.css
+++ b/public/admin/edit.css
@@ -143,12 +143,14 @@ header {
     line-height: 19px;
     font-weight: bold;
     color: #555555;
+    box-sizing: border-box;
 }
 
 textarea {
     padding-top: 18px;
     padding-right: 40px;
     height: 257px;
+    resize: none;
 }
 
 .recipe div button {
