--- a/src/app/views/admin/edit-chef.njk
+++ b/src/app/views/admin/edit-chef.njk
@@ -21,13 +21,13 @@
         <div class="name">
             <h3>Nome</h3>
 
-            <input type="text" name="name" value="{{chef.name}}">
+            <input type="text" name="name" value="{{chef.name}}" required>
         </div>
 
         <div class="image">
             <h3>Avatar</h3>
 
-            <input type="url" name="avatar_url" value="{{chef.avatar_url}}">
+            <input type="url" name="avatar_url" value="{{chef.avatar_url}}" required>
         </div>
 
     </form>
