--- a/src/app/views/website/home.njk
+++ b/src/app/views/website/home.njk
@@ -29,7 +29,7 @@
                     </div>
                     <div class="card-info">
                         <p>por
-                            {{recipes[i].author}}</p>
+                            {{recipes[i].chef_name}}</p>
                     </div>
                 </div>
             {% endif %}
