--- a/src/app/views/website/layout.njk
+++ b/src/app/views/website/layout.njk
@@ -16,7 +16,14 @@
             <div class="links">
                 <a class="sobre" href="/about">Sobre</a>
                 <a class="receitas" href="/recipes">Receitas</a>
+                <a class="chefs" href="/chefs">Chefs</a>
             </div>
+
+            <form class="filter" action="/recipes" method="get">
+                <input type="text" name="filter" placeholder="Buscar uma receita" value="{{filter}}">
+
+                <button type="submit">Buscar</button>
+            </form>
 
         </header>
 
