--- a/src/app/views/admin/edit-chef.njk
+++ b/src/app/views/admin/edit-chef.njk
@@ -36,6 +36,6 @@
         <input type="hidden" name="id" value="{{chef.id}}">
     </form>
 
-    <script src="/admin/edit.js"></script>
+    <script src="/admin/edit-chef.js"></script>
 
 {% endblock content %}
