--- a/src/app/views/website/recipes.njk
+++ b/src/app/views/website/recipes.njk
@@ -56,5 +56,11 @@
         </div>
     </div>
 
+    <div class="pagination" 
+            data-page={{pagination.page}}
+            data-total={{pagination.total}} 
+            data-filter={{filter}}
+    ></div>
+
     <script src="/website/recipes.js"></script>
 {% endblock content %}
